[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/AIBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney Future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[node name="AIBase" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="ScanArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanArea"]

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LabelName" type="Label" parent="."]
margin_left = -118.0
margin_top = -30.0
margin_right = 118.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 1 )
text = "AI"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="ScanArea" to="." method="_on_ScanArea_body_entered"]
[connection signal="body_exited" from="ScanArea" to="." method="_on_ScanArea_body_exited"]
